<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dtstack.flink</groupId>
    <artifactId>flink.sql</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>flink.sql</name>
    <url>http://maven.apache.org</url>
    <modules>
        <module>core</module>
        <module>kafka-base</module>
<!--        <module>kafka09</module>-->
<!--        <module>kafka10</module>-->
<!--        <module>kafka11</module>-->
        <module>kafka</module>
        <module>cdc</module>
        <module>promethus</module>
<!--        <module>hologres</module>-->
        <module>iceberg</module>
        <module>druid-io</module>
        <module>mysql</module>
<!--        <module>hbase</module>-->
<!--        <module>elasticsearch5</module>-->
        <module>elasticsearch6</module>
<!--        <module>mongo</module>-->
<!--        <module>redis5</module>-->
        <module>launcher</module>
        <module>rdb</module>
<!--        <module>sqlserver</module>-->
<!--        <module>oracle</module>-->
        <module>cassandra</module>
<!--        <module>kudu</module>-->
        <module>postgresql</module>
<!--        <module>serversocket</module>-->
        <module>console</module>
<!--        <module>clickhouse</module>-->
<!--        <module>impala</module>-->
<!--        <module>db2</module>-->
<!--        <module>polardb</module>-->
<!--        <module>oceanbase</module>-->
<!--        <module>tidb</module>-->
        <!--        <module>localTest</module>-->
        <module>gotin-udf</module>

    </modules>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <flink.version>1.11.1</flink.version>
        <hadoop.version>2.7.3</hadoop.version>

        <!--本地运行设置为compile、线上设置为provided-->
        <devDependency.scope>provided</devDependency.scope>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.8</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>2.2.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dateFormat>yyyy.MM.dd HH:mm:ss</dateFormat>
                    <verbose>true</verbose>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <gitDescribe>
                        <always>false</always>
                        <dirty>-dirty</dirty>
                        <forceLongFormat>false</forceLongFormat>
                    </gitDescribe>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
